=== dev

* enhancments

  * added support for 0 to n args in matcher DSL

=== Version 1.2.0 / 2009-03-15

WARNINGS:

  * If you use the ruby command to run specs instead of the spec command, you'll
    need to require 'spec/autorun' or they won't run. This won't affect you if
    you use the spec command or the Spec::Rake::SpecTask that ships with RSpec.

  * require 'spec/test/unit' to invoke test/unit interop if you're using
    RSpec's core (this is handled implicitly with spec-rails)

  * setup and teardown are gone - use before and after instead

    * you can still use setup and teardown if you're using
      Test::Unit::TestCase as the base ExampleGroup class (which is implicit
      in rspec-rails)
      
  * The matcher protocol has been improved. The old protocol is still
    supported, so as long as you're not monkey patching rspec's built-in
    matchers, or using extension libraries that do, this should not affect
    you. If you run into trouble, you'll just need to change:
    
    * failure_message          => failure_message_for_should
    * negative_failure_message => failure_message_for_should_not
      
  * All references to rubygems have been removed from within rspec's code.
  
    * See http://gist.github.com/54177 for rationale and suggestions on
      alternative approaches to loading rubygems

* deprecations

  * BaseTextFormatter#colourize - use colorize_failure instead.
  * BaseTextFormatter#magenta - use red instead.

* enhancements

  * cleaner integration with with heckle-1.4.2
  * allow registering example groups with a path-like key (Pat Maddox)
  * start DRb service at "druby://localhost:0" (Hongli Lai) - See http://redmine.ruby-lang.org/issues/show/496 
  * consistent reporting of errors as failures
  * added spec/test/unit as more intuitive path to loading test/unit interop lib
  * added explicit autorun feature for running specs with ruby command